--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../stylesheets/styles.css">
-    <title>Document</title>
+    <title>Starving Artists Value List</title>
 </head>
 <!--I was forced to use vanilla html, css, & js.-->
+<!--Yes I know I can make classes and deticate css to them, but no, this is easier.-->
 <body style="font-family: 'Roboto', sans-serif; margin: 0; background-color: var(--bgColorLight1);">
-<div class="__main" style="display: grid; grid-template-rows: 50px 1fr 1fr 50px;">
-    <header style="width: 100%; height: 50px; display: flex; align-items: center; background-color: var(--bgColorLight2); justify-content: space-between; justify-self: center;">
+<div class="__main" style="display: grid; grid-template-rows: 50px auto auto 50px;">
+    <header style="width: 100%; height: 50px; display: flex; align-items: center; background-color: var(--bgColorLight2); justify-content: space-between; justify-self: center; box-shadow: 0 2px 5px 0 rgb(0 0 0 / 1%)">
         <div></div>
         <h1 style="font-size: 20px; font-family: indigoRegular; font-weight: 1; color: var(--textColorLight3); margin: 0;">Starving Artists Value List</h1>
         <button id="changeTheme" style="width: 30px; height: 50px; margin-right: 10px; border: none; background: none;"><svg stroke="var(--textColorLight1)" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg></button>
@@ -31,9 +32,18 @@
                 <span style="font-size: 20px; color: var(--textColorLight3); margin: 3px; display: inline-block;">• LAGurlz <span style="color: var(--textColorLight1);">Owner</span> </span>
             </div>
             <div>
-                <span style="font-size: 20px; color: var(--textColorLight3); margin: 3px; display: inline-block;">• Member <span style="color: var(--textColorLight1);">Value Changer</span> </span>
-                <span style="font-size: 20px; color: var(--textColorLight3); margin: 3px; display: inline-block;">• Member <span style="color: var(--textColorLight1);">Value Changer</span> </span>
-                <span style="font-size: 20px; color: var(--textColorLight3); margin: 3px; display: inline-block;">• Member <span style="color: var(--textColorLight1);">Value Changer</span> </span>
+                <span style="font-size: 20px; color: var(--textColorLight3); margin: 3px; display: inline-block;">• XxzythxX <span style="color: var(--textColorLight1);">Value Changer</span> </span>
+                <span style="font-size: 20px; color: var(--textColorLight3); margin: 3px; display: inline-block;">• Ahmad11 <span style="color: var(--textColorLight1);">Value Changer</span> </span>
+                <span style="font-size: 20px; color: var(--textColorLight3); margin: 3px; display: inline-block;">• RedNightBlade <span style="color: var(--textColorLight1);">Value Changer</span> </span>
+            </div>
+        </div>
+    </div>
+
+    <div style="margin: 30px; padding-left: 50px; display: grid; grid-template-rows: 75px auto;">
+        <h1 style="font-size: 30px; font-family: indigoRegular; font-weight: 1; color: var(--textColorLight2); height: 0px;">Frame Values</h1>
+        <div class="frameValues" style="width: auto; height: auto; display: grid; grid-template-columns: repeat(auto-fill, 400px); gap: 10px;">
+            <div class="itemContainer">
+                
             </div>
         </div>
     </div>
