--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -13,20 +13,20 @@
 <div class="__main" style="display: grid; grid-template-rows: 50px auto auto 50px;">
     <header style="width: 100%; height: 50px; display: flex; align-items: center; background-color: var(--bgColorLight2); justify-content: space-between; justify-self: center; box-shadow: 0 2px 5px 0 rgb(0 0 0 / 1%)">
         <div></div>
-        <h1 style="font-size: 20px; font-family: indigoRegular; font-weight: 1; color: var(--textColorLight3); margin: 0;">Starving Artists Value List</h1>
+        <h1 style="font-size: 20px; font-weight: 900; color: var(--textColorLight3); margin: 0;">Starving Artists Value List</h1>
         <button id="changeTheme" style="width: 30px; height: 50px; margin-right: 10px; border: none; background: none;"><svg stroke="var(--textColorLight1)" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg></button>
     </header>
 
     <div style="margin: 30px; display: grid; grid-template-columns: 1fr 1fr;">
         <div class="info" style="padding-left: 50px;">
-            <h1 style="font-size: 30px; font-family: indigoRegular; font-weight: 1; color: var(--textColorLight2);">Notes & Info</h1>
+            <h1 style="font-size: 30px; font-weight: 900; color: var(--textColorLight2);">Notes & Info</h1>
             <p style="font-size: 20px; color: var(--textColorLight1); margin: 3px;">• Values are related to in-game items within <a href="https://www.roblox.com/games/8916037983" style="color: var(--textColorLight3);">Starving Artists</a></p>
             <p style="font-size: 20px; color: var(--textColorLight1); margin: 3px;">• Values are expected to change. Join our <a href="https://discord.gg/XnwWm3Ujje" style="color: var(--textColorLight3);">Discord</a> to keep up to date.</p>
             <p style="font-size: 20px; color: var(--textColorLight1); margin: 3px;">• Values are not set, you decide if you'd like to follow them.</p>
             <p style="font-size: 20px; color: var(--textColorLight1); margin: 3px;">• Last Updated March 8 2022 10:39 pm GMT.</p>
         </div>
         <div class="credits" style="display: grid; grid-template-rows: 75px 40px auto; height: 100%;">
-            <h1 style="font-size: 30px; font-family: indigoRegular; font-weight: 1; color: var(--textColorLight2); height: 0px;">Credits</h1>
+            <h1 style="font-size: 30px; font-weight: 900; color: var(--textColorLight2); height: 0px;">Credits</h1>
             <div>
                 <span style="font-size: 20px; color: var(--textColorLight3); margin: 3px; display: inline-block;">• Intrance <span style="color: var(--textColorLight1);">Owner</span> </span>
                 <span style="font-size: 20px; color: var(--textColorLight3); margin: 3px; display: inline-block;">• LAGurlz <span style="color: var(--textColorLight1);">Owner</span> </span>
@@ -40,7 +40,7 @@
     </div>
 
     <div style="margin: 30px; padding-left: 50px; display: grid; grid-template-rows: 75px auto;">
-        <h1 style="font-size: 30px; font-family: indigoRegular; font-weight: 1; color: var(--textColorLight2); height: 0px;">Frame Values</h1>
+        <h1 style="font-size: 30px; font-weight: 900; color: var(--textColorLight2); height: 0px;">Frame Values</h1>
         <div class="frameValues" style="width: auto; height: auto; display: grid; grid-template-columns: repeat(auto-fill, 400px); gap: 10px;">
             <div class="itemContainer">
                 
