--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -41,12 +41,17 @@
 
     <div style="margin: 30px; padding-left: 50px; display: grid; grid-template-rows: 75px auto;">
         <h1 style="font-size: 30px; font-weight: 900; color: var(--textColorLight2); height: 0px;">Frame Values</h1>
-        <div class="frameValues" style="width: auto; height: auto; display: grid; grid-template-columns: repeat(auto-fill, 400px); gap: 10px;">
-            <div class="itemContainer">
-                
+        <div id="frameValues" style="width: auto; height: auto; display: grid; grid-template-columns: repeat(auto-fill, 400px); gap: 10px;">
+            <div id="exampleItemContainer" class="itemContainer">
+                <img src="../assets/bamboo_frame.png" style="max-width: 150px; grid-area: image;">
+                <h1 style="font-size: 20px; font-weight: 900; color: var(--textColorLight2); grid-area: itemName; margin: 0; padding-top: 22px;"></h1>
+                <span style="font-size: 17px; color: var(--textColorLight1); margin: 3px; display: inline-block; grid-area: itemRarity; margin: 0;">Rarity <span style="color: var(--textColorLight3);">Rairty</span> </span>
+                <span style="font-size: 17px; color: var(--textColorLight1); margin: 3px; display: inline-block; grid-area: itemCost; margin: 0;">Value <img src="../assets/robux.png" width="15px"> <span style="color: var(--textColorLight3);">0</span> </span>
+                <span style="font-size: 17px; color: var(--textColorLight1); margin: 3px; display: inline-block; grid-area: itemDemand; margin: 0;">Demand </span>
             </div>
         </div>
     </div>
 </div>
+<script src="../js/index.js"></script>
 </body>
 </html>
