--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../stylesheets/styles.css">
+    <link rel="stylesheet" href="./stylesheets/styles.css">
     <title>Starving Artists Value List</title>
 </head>
 <!--I was forced to use vanilla html, css, & js.-->
@@ -65,6 +65,6 @@
         </div>
     </div>
 </div>
-<script src="../js/index.js"></script>
+<script src="./js/index.js"></script>
 </body>
 </html>
