--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <img src="../assets/bamboo_frame.png" style="max-width: 150px; grid-area: image;">
                 <h1 style="font-size: 20px; font-weight: 900; color: var(--textColorLight2); grid-area: itemName; margin: 0; padding-top: 22px;"></h1>
                 <span style="font-size: 17px; color: var(--textColorLight1); margin: 3px; display: inline-block; grid-area: itemRarity; margin: 0;">Rarity <span style="color: var(--textColorLight3);">Rairty</span> </span>
-                <span style="font-size: 17px; color: var(--textColorLight1); margin: 3px; display: inline-block; grid-area: itemCost; margin: 0;">Value <img src="../assets/robux.png" width="15px"> <span style="color: var(--textColorLight3);">0</span> </span>
+                <span style="font-size: 17px; color: var(--textColorLight1); margin: 3px; display: inline-block; grid-area: itemCost; margin: 0;">Value <img src="https://raw.githubusercontent.com/alpharmi/starving-artists/main/assets/robux.png" width="15px"> <span style="color: var(--textColorLight3);">0</span> </span>
                 <span style="font-size: 17px; color: var(--textColorLight1); margin: 3px; display: inline-block; grid-area: itemDemand; margin: 0;">Demand </span>
             </div>
         </div>
@@ -59,7 +59,7 @@
                 <img src="../assets/bamboo_frame.png" style="max-width: 150px; grid-area: image;">
                 <h1 style="font-size: 20px; font-weight: 900; color: var(--textColorLight2); grid-area: itemName; margin: 0; padding-top: 22px;"></h1>
                 <span style="font-size: 17px; color: var(--textColorLight1); margin: 3px; display: inline-block; grid-area: itemRarity; margin: 0;">Rarity <span style="color: var(--textColorLight3);">Rairty</span> </span>
-                <span style="font-size: 17px; color: var(--textColorLight1); margin: 3px; display: inline-block; grid-area: itemCost; margin: 0;">Value <img src="../assets/robux.png" width="15px"> <span style="color: var(--textColorLight3);">0</span> </span>
+                <span style="font-size: 17px; color: var(--textColorLight1); margin: 3px; display: inline-block; grid-area: itemCost; margin: 0;">Value <img src="https://raw.githubusercontent.com/alpharmi/starving-artists/main/assets/robux.png" width="15px"> <span style="color: var(--textColorLight3);">0</span> </span>
                 <span style="font-size: 17px; color: var(--textColorLight1); margin: 3px; display: inline-block; grid-area: itemDemand; margin: 0;">Demand </span>
             </div>
         </div>
